--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <h1>A site about chocolate</h1>
     <h3>We will see some of the world's chocolates!</h3>
     </div>
+    <p>It arrived to Europe in 16<sup>th</sup> century</p>
 </body>
 </html>
