--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
     <h3>We will see some of the world's chocolates!</h3>
     </div>
     <p>It arrived to Europe in 16<sup>th</sup> century</p>
+    <p>this is an example</p>
+    <p>this is another example</p>
+    <p>one more example</p>
 </body>
 </html>
