--- a/index.html
+++ b/index.html
@@ -1,20 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel = "stylesheet" type = "text/css" href ="css/mystyles.css">
+    <link rel="stylesheet" type="text/css" href="css/mystyles.css">
     <title>Choco home</title>
 </head>
+
 <body>
     <div class="jumbotron">
-    <h1>A site about chocolate</h1>
-    <h3>We will see some of the world's chocolates!</h3>
+        <h1>A site about chocolate</h1>
+        <h3>We will see some of the world's chocolates!</h3>
     </div>
-    <p>It arrived to Europe in 16<sup>th</sup> century</p>
-    <p>this is an example</p>
-    <p>this is another example</p>
-    <p>one more example</p>
+    <ol>
+        <li>It arrived to Europe in 16<sup>th</sup> century</li>
+        <li>The first years, only drinking chocolate was available</li>
+        <li>It was considered luxury food!</li>
+        <li>It contains caffeine</li>
+        <li><mark>Your brain needs it after hard work!</mark></li>
+    </ol>
+    <a href="https://en.wikipedia.org/wiki/Chocolate" target="_blank">
+        <img src="images/chocolatethings.jpg" alt="Wikipedia chocolate"
+            title="Wikipedia chocolate">
+    </a>
 </body>
+
 </html>
